ffprobe: use av_guess_sample_aspect_ratio() for guessing the aspect ratio

This is consistent with what av_dump_format() does.

In particular, fix trac ticket #1568.